--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 			[0, 0],
 			[200, 200]
 		];
-		var image = L.imageOverlay('https://s3.ax1x.com/2021/01/06/sVFNu9.jpg', bounds).addTo(map);
+		var image = L.imageOverlay('https://s3.ax1x.com/2021/01/14/saSw9K.jpg', bounds).addTo(map);
 		//getUserLocation()
 		setQueryNavRoute();
 		
