--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 			[0, 0],
 			[200, 200]
 		];
-		var image = L.imageOverlay('https://s3.ax1x.com/2021/01/21/sfzggK.jpg', bounds).addTo(map);
+		var image = L.imageOverlay('https://mp.yirunyuming.com/images/d9320b183adc45969d29b71b9da41611.jpg', bounds).addTo(map);
 		//getUserLocation()
 		setQueryNavRoute();
 
